functional integration of full stack components... tailoring to our policy agent use remains

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,4 +1,5 @@
-{// TypeScript config for all Devvit server code.
+// TypeScript config for all Devvit server code.
+{
   "extends": "../../tools/tsconfig-base.json",
   "compilerOptions": {
     "lib": ["ES2023"],
